javali_tests/A3/A4_keinestamSchmid/fail/IncorrectBuiltInReadFloatCall2.javali
// Rule 2.3.9: Tests that readf cannot produce non-float type.
class Main {
	void main() {
		int r;
		r = readf();
	}
}